2010-02-04 Gregory John Casamento <greg.casamento@gmail.com>

	* SystemPreferences.ico: Added ico

2009-08-24 23:54-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* SystemPreferences.m: Change to use animate option so that
	the window changes shape gradually instead of immediately.
